@@ -65,8 +65,8 @@ for my $arg ( @ARGV ) {
             }
         }
 
-        # Omit any POD unless it's the doc modules.
-        if ( $filename !~ m{/App/Ack/Docs/} ) {
+        # Omit any POD unless it's the doc module.
+        if ( $filename !~ m{/App/Ack/Manual} ) {
             $was_in_pod = $in_pod;
 
             if ( /^=(\w+)/ ) {
